# FallField_blog

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
.github/workflows/: deploy.yml
src/: main.rs
src/routes/: admin.rs  blogs.rs  home.rs  mod.rs  projects.rs
static/css/: style.css
templates/: base.html.tera  index.html.tera
templates/blogs/: details.html.tera  list.html.tera
templates/projects/: details.html.tera  list.html.tera
